# scriptorium

./: .env.example  .gitignore  ARCHITECTURE.md  Benardete_Comprehensive_Findings.md  Cummings_Erotic_Poems.md  Esoteric_vs_Exoteric_Writing_Research.md  Freedom_and_the_Human_Person.md  Hermeneutics_as_Politics.md  How_Does_a_Poem_Mean.md  How_to_Read_Literature_Like_a_Professor.md  How_to_Read_Poetry_Like_a_Professor.md  LICENSE  Platos_Symposium_Rosen.md  Rhymes_Reason.md  Singing_School_Pinsky.md  The_Elusiveness_of_the_Ordinary.md  The_Limits_of_Analysis.md  What_Is_This_Thing_Called_Love.md  benardete_analysis_report.md  benardete_llm_prompt.md  cummings_llm_prompt.md  demo_analysis_report.md  demo_literary_report.md  dev.sh  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.shelfmark.yml  docker-compose.yml  esoteric_analyzer.py  frost_literary_report.md  frost_llm_prompt.md  frost_study_edition.epub  literary_analyzer.py  llm_esoteric_prompt.md  study_edition_demo.epub  study_edition_demo.html  study_edition_demo.kepub.epub  study_edition_demo_kobo.html  study_edition_generator.py  verification_test_report.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  FILE_MANIFEST.txt  INDEX.md  PROJECT_SUMMARY.md  README.md  VERIFICATION_REPORT.md  alembic.ini  docker-entrypoint.sh  migrate_booklore.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase2.py  0003_koreader_progress.py  0004_oidc_user_fields.py  0005_reading_status_rating.py  0006_book_contributors.py  0007_api_keys.py  0008_reading_lists.py  0009_collections.py  0010_annotations.py  0011_library_access.py  0012_read_sessions.py  0013_drop_reading_lists.py  0014_kobo_token_shelf_filter.py  0015_locked_fields.py  0016_publisher_subtitle.py  0017_esoteric_enabled_prompt_configs.py  0018_marginalia.py  0019_tags_esoteric_reading_five_keys.py  0020_commentator_source.py  0021_reading_level.py  0022_notebooks.py  0023_physical_copy.py  0024_reading_goals.py  0025_abs_item_id.py  0026_seed_standard_analysis_templates.py  0027_library_sort_order.py  0028_book_series_position_volume_arc.py  0029_library_naming_pattern.py  0030_enrichment_keys_in_db.py  0031_works_editions_tables.py  0032_backfill_works_editions.py  0033_works_editions_indexes.py  0034_drop_legacy_book_columns.py  0035_add_librarything_api_key.py  0036_add_work_doi.py  0037_add_content_warnings.py  0038_isbn_normalization.py  0039_add_asin.py  0040_add_location.py  (+34 more)
backend/app/: config.py  database.py  main.py  middleware.py
backend/app/api/: __init__.py  admin.py  analysis.py  annotations.py  api_keys.py  articles.py  audiobookshelf.py  auth.py  books.py  browse.py  collections.py  cross_analysis.py  devices.py  duplicates.py  editions.py  export.py  goals.py  ingest.py  kobo.py  libraries.py  locations.py  loose_leaves.py  marginalia.py  metadata.py  notebooks.py  opds.py  progress.py  read_sessions.py  reading_lists.py  search.py  shelves.py  stats.py  story_arcs.py  sync.py  tts.py  users.py  works.py
backend/app/models/: __init__.py  analysis.py  annotation.py  api_key.py  article.py  audit.py  background_job.py  book.py  collection.py  comic.py  edition.py  file_progress.py  identifier.py  ingest.py  kobo_bookmark.py  kobo_span.py  library.py  location.py  marginalium.py  notebook.py  page_inventory.py  progress.py  read_session.py  reading.py  reading_list.py  shelf.py  system.py  user.py  work.py
backend/app/schemas/: analysis.py  annotation.py  api_key.py  book.py  collection.py  edition.py  library.py  library_access.py  marginalium.py  progress.py  read_session.py  reading_list.py  shelf.py  user.py  work.py
backend/app/services/: analysis.py  analysis_export.py  audiobookshelf.py  audit.py  auth.py  background_jobs.py  comicinfo.py  content_restrictions.py  conversion.py  cover_gen.py  cover_quality.py  covers.py  divina.py  email.py  embeddings.py  esoteric.py  esoteric_engine.py  esoteric_llm_integration.py  events.py  exclude_patterns.py  file_streaming.py  filename_metadata.py  identifier_extraction.py  ingest.py  instapaper.py  kepub.py  kobo_annotations.py  kobo_fonts.py  kobo_spans.py  kobo_sync.py  (+20 more)
backend/scripts/: reassign_academic_to_books.py  relocate_stale_ingest.py  repair_cover_hashes.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_libraries.py  test_url_safety.py
(+168 files in other folders)
